# signal

./: AGENTS.md  ARCHITECTURE.md  Cargo.toml  INTENT.md  NON_IDEAL_AGENTS.md  README.md  flake.nix
.beads/: config.yaml  metadata.json
schema/: signal.concept.schema
src/: auth.rs  diagnostic.rs  domain.rs  edit.rs  effect.rs  flow.rs  frame.rs  handshake.rs  hash.rs  identity.rs  keybind.rs  layout.rs  lib.rs  module.rs  names.rs  origin.rs  pattern.rs  primitive.rs  program.rs  query.rs  reply.rs  request.rs  schema.rs  slot.rs  style.rs  tweaks.rs  ty.rs  value.rs
tests/: frame.rs  schema.rs  text_round_trip.rs
