[package]
name         = "signal"
version      = "0.1.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/LiGoldragon/signal"
description  = "signal — the criome binary language. Wire envelope (Frame, handshake) + per-verb typed payloads + sema record kinds. Anything criome is signal."

[dependencies]
rkyv       = { version = "0.8", default-features = false, features = ["std", "bytecheck", "little_endian", "pointer_width_32", "unaligned"] }
nota-codec = { git = "https://github.com/LiGoldragon/nota-codec.git", rev = "103b3de6ff177ef20c9c00cabda4a9342bc7edb9" }
thiserror  = "2"
